Only strip BOM from Buffer containing UTF8
Discussion: https://github.com/wearefractal/vinyl-fs/pull/21

--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "buffer",
     "string"
   ],
+  "dependencies": {
+    "is-utf8": "^0.2.0"
+  },
   "devDependencies": {
     "mocha": "*"
   }
