--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "streams"
   ],
   "dependencies": {
-    "is-utf8": "^0.2.0",
-    "through2": "^0.4.1"
+    "first-chunk-stream": "^0.1.0",
+    "is-utf8": "^0.2.0"
   },
   "devDependencies": {
     "concat-stream": "^1.4.5",
