--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
   "author": {
     "name": "Sindre Sorhus",
     "email": "sindresorhus@gmail.com",
-    "url": "http://sindresorhus.com"
+    "url": "sindresorhus.com"
   },
-  "bin": {
-    "strip-bom": "cli.js"
-  },
+  "bin": "cli.js",
   "engines": {
     "node": ">=0.10.0"
   },
@@ -23,6 +21,7 @@
     "index.js"
   ],
   "keywords": [
+    "cli-app",
     "cli",
     "bin",
     "app",
