move stream and CLI functionality into separate modules
- [strip-bom-cli](https://github.com/sindresorhus/strip-bom-cli)
- [strip-bom-stream](https://github.com/sindresorhus/strip-bom-stream)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "strip-bom",
   "version": "1.0.0",
-  "description": "Strip UTF-8 byte order mark (BOM) from a string/buffer/stream",
+  "description": "Strip UTF-8 byte order mark (BOM) from a string/buffer",
   "license": "MIT",
   "repository": "sindresorhus/strip-bom",
   "author": {
@@ -9,7 +9,6 @@
     "email": "sindresorhus@gmail.com",
     "url": "sindresorhus.com"
   },
-  "bin": "cli.js",
   "engines": {
     "node": ">=0.10.0"
   },
@@ -17,14 +16,9 @@
     "test": "mocha"
   },
   "files": [
-    "cli.js",
     "index.js"
   ],
   "keywords": [
-    "cli-app",
-    "cli",
-    "bin",
-    "app",
     "bom",
     "strip",
     "byte",
@@ -33,20 +27,16 @@
     "utf8",
     "utf-8",
     "remove",
+    "delete",
     "trim",
     "text",
     "buffer",
-    "string",
-    "stream",
-    "streams"
+    "string"
   ],
   "dependencies": {
-    "first-chunk-stream": "^1.0.0",
-    "is-utf8": "^0.2.0",
-    "meow": "^3.3.0"
+    "is-utf8": "^0.2.0"
   },
   "devDependencies": {
-    "concat-stream": "^1.4.5",
     "mocha": "*"
   }
 }
